Adding get all func
